# photo-scan-split

./: AGENTS.md  LICENSE  README.md  pyproject.toml
photo_scan_split/: __main__.py  cli.py  scanner.py  splitter.py
